--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4045,5 +4045,6 @@
     "CL_CF_CS_bio24_elements_setup_step3": "Натиснете ''CONNECT OVEN'' от лявата страна. Когато се отвори менюто, натиснете бутона за превключване вдясно, за да активирате Wi-Fi.",
     "CL_CF_CS_bio24_elements_setup_step4": "Появява се бутон ''СВЪРЗВАНЕ''. Натиснете бутона. Вече можете да продължите в приложението, като докоснете бутона NEXT по-долу.",
     "CL_CF_CS_bio24_elements_pair_step3": "Натиснете „СВЪРЗВАНЕ НА ПОТРЕБИТЕЛЯ“ от лявата страна. Когато се отвори менюто, натиснете бутона ''PAIR''. Вече можете да продължите в приложението, като докоснете бутона NEXT по-долу.",
-    "CL_DV_RF_scan_login_code_invalid": "Невалиден QR код за влизане!"
+    "CL_DV_RF_scan_login_code_invalid": "Невалиден QR код за влизане!",
+    "CL_CF_CS_soft_last_step": "Свържете се с мрежата \"HIS-xxxx\" в Wi-Fi настройките на вашия смартфон. \n\n Излезте от приложението ConnectLife, отидете в WiFi настройките на вашия смартфон. Свържете се с мрежата „HIS-xxxx“ и се върнете обратно към приложението ConnectLife."
 }
