--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -4045,5 +4045,6 @@
     "CL_CF_CS_bio24_elements_setup_step3": "Притиснете на ''CONNECT OVEN'' на левата страна. Кога ќе се отвори менито, притиснете го копчето за вклучување надесно за да овозможите Wi-Fi.",
     "CL_CF_CS_bio24_elements_setup_step4": "Се појавува копче ''CONNECT''. Притиснете на копчето. Сега можете да продолжите во апликацијата со допирање на копчето СЛЕДНО подолу.",
     "CL_CF_CS_bio24_elements_pair_step3": "Притиснете на ''Поврзи КОРИСНИК'' на левата страна. Кога ќе се отвори менито, притиснете го копчето ''PAIR''. Сега можете да продолжите во апликацијата со допирање на копчето СЛЕДНО подолу.",
-    "CL_DV_RF_scan_login_code_invalid": "Неважечки QR код за најава!"
+    "CL_DV_RF_scan_login_code_invalid": "Неважечки QR код за најава!",
+    "CL_CF_CS_soft_last_step": "Поврзете се на мрежата „HIS-xxxx“ во поставките за Wi-Fi на вашиот паметен телефон. \n\n Излезете од апликацијата ConnectLife, одете до поставките за WiFi на паметниот телефон. Поврзете се на мрежата „HIS-xxxx“ и вратете се на апликацијата ConnectLife."
 }
