--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4045,5 +4045,6 @@
     "CL_CF_CS_bio24_elements_setup_step3": "Нажмите на ''ПОДКЛЮЧИТЬ ПЕЧЬ'' слева. Когда откроется меню, нажмите на кнопку-переключатель справа, чтобы включить Wi-Fi.",
     "CL_CF_CS_bio24_elements_setup_step4": "Появляется кнопка ''ПОДКЛЮЧИТЬ''. Нажмите на кнопку. Теперь вы можете продолжить работу в приложении, нажав на кнопку ДАЛЕЕ ниже.",
     "CL_CF_CS_bio24_elements_pair_step3": "Нажмите на ''CONNECT USER'' слева. Когда откроется меню, нажмите на кнопку ''PAIR''. Теперь вы можете продолжить в приложении, нажав на кнопку ДАЛЕЕ ниже.",
-    "CL_DV_RF_scan_login_code_invalid": "Неверный QR-код входа!"
+    "CL_DV_RF_scan_login_code_invalid": "Неверный QR-код входа!",
+    "CL_CF_CS_soft_last_step": "Подключитесь к сети «HIS-xxxx» в настройках Wi-Fi вашего смартфона. \n\n Выйдите из приложения ConnectLife, перейдите в настройки WiFi вашего смартфона. Подключитесь к сети \"HIS-xxxx\" и вернитесь обратно в приложение ConnectLife."
 }
