--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4045,5 +4045,6 @@
     "CL_CF_CS_bio24_elements_setup_step3": "Натисніть «ПІД’ЄДНАТИ ДУХОВКУ» зліва. Коли відкриється меню, натисніть кнопку перемикання праворуч, щоб увімкнути Wi-Fi.",
     "CL_CF_CS_bio24_elements_setup_step4": "З'явиться кнопка «ПІДКЛЮЧИТИ». Натисніть на кнопку. Тепер ви можете продовжити в програмі, натиснувши кнопку ДАЛІ нижче.",
     "CL_CF_CS_bio24_elements_pair_step3": "Натисніть «ПІДКЛЮЧИТИ КОРИСТУВАЧА» зліва. Коли відкриється меню, натисніть кнопку «ПАРА». Тепер ви можете продовжити в програмі, натиснувши кнопку ДАЛІ нижче.",
-    "CL_DV_RF_scan_login_code_invalid": "Недійсний QR-код для входу!"
+    "CL_DV_RF_scan_login_code_invalid": "Недійсний QR-код для входу!",
+    "CL_CF_CS_soft_last_step": "Підключіться до мережі «HIS-xxxx» в налаштуваннях Wi-Fi вашого смартфона. \n\n Вийдіть із програми ConnectLife, перейдіть до налаштувань WiFi вашого смартфона. Підключіться до мережі «HIS-xxxx» і поверніться до програми ConnectLife."
 }
