--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4045,5 +4045,9 @@
     "CL_CF_CS_bio24_elements_setup_step3": "बाईं ओर ''कनेक्ट ओवन'' दबाएँ। जब मेनू खुल जाए, तो वाई-फाई सक्षम करने के लिए दाईं ओर टॉगल बटन दबाएँ।",
     "CL_CF_CS_bio24_elements_setup_step4": "एक बटन ''कनेक्ट'' दिखाई देता है। बटन दबाएँ। अब आप नीचे NEXT बटन पर टैप करके ऐप में आगे बढ़ सकते हैं।",
     "CL_CF_CS_bio24_elements_pair_step3": "बाईं ओर ''CONNECT USER'' पर दबाएँ। जब मेनू खुल जाए, तो ''PAIR'' बटन दबाएँ। अब आप नीचे NEXT बटन पर टैप करके ऐप में आगे बढ़ सकते हैं।",
-    "CL_DV_RF_scan_login_code_invalid": "अमान्य लॉगिन QR कोड!"
+    "CL_DV_RF_scan_login_code_invalid": "अमान्य लॉगिन QR कोड!",
+    "CL_CF_CS_soft_last_step": "अपने स्मार्टफोन की वाई-फाई सेटिंग में \"HIS-xxxx\" नेटवर्क से कनेक्ट करें। \n\n कनेक्टलाइफ ऐप से बाहर निकलें, अपने स्मार्टफोन की वाई-फाई सेटिंग में जाएं। \"HIS-xxxx\" नेटवर्क से कनेक्ट करें और वापस कनेक्टलाइफ ऐप पर लौटें।",
+    "CL_DV_RF_view_detail": "विवरण देखें",
+    "CL_DV_RF_structural_diagram": "संरचनात्मक आरेख",
+    "CL_DV_OV_more_options": "अधिक विकल्प"
 }
