--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4045,5 +4045,9 @@
     "CL_CF_CS_bio24_elements_setup_step3": "Πατήστε ''ΣΥΝΔΕΣΗ ΦΟΥΡΝΟΥ'' στην αριστερή πλευρά. Όταν ανοίξει το μενού, πατήστε το κουμπί εναλλαγής στα δεξιά για να ενεργοποιήσετε το Wi-Fi.",
     "CL_CF_CS_bio24_elements_setup_step4": "Εμφανίζεται ένα κουμπί ''CONNECT''. Πατήστε το κουμπί. Τώρα μπορείτε να προχωρήσετε στην εφαρμογή πατώντας στο κουμπί ΕΠΟΜΕΝΟ παρακάτω.",
     "CL_CF_CS_bio24_elements_pair_step3": "Πατήστε ''ΣΥΝΔΕΣΗ ΧΡΗΣΤΗ'' στην αριστερή πλευρά. Όταν ανοίξει το μενού, πατήστε το κουμπί ''PAIR''. Τώρα μπορείτε να προχωρήσετε στην εφαρμογή πατώντας στο κουμπί ΕΠΟΜΕΝΟ παρακάτω.",
-    "CL_DV_RF_scan_login_code_invalid": "Μη έγκυρος κωδικός QR σύνδεσης!"
+    "CL_DV_RF_scan_login_code_invalid": "Μη έγκυρος κωδικός QR σύνδεσης!",
+    "CL_CF_CS_soft_last_step": "Συνδεθείτε στο δίκτυο \"HIS-xxxx\" στις ρυθμίσεις Wi-Fi του smartphone σας. \n\n Κλείστε την εφαρμογή ConnectLife, μεταβείτε στις ρυθμίσεις WiFi του smartphone σας. Συνδεθείτε στο δίκτυο \"HIS-xxxx\" και επιστρέψτε στην εφαρμογή ConnectLife.",
+    "CL_DV_RF_view_detail": "Προβολή λεπτομερειών",
+    "CL_DV_RF_structural_diagram": "Δομικό Διάγραμμα",
+    "CL_DV_OV_more_options": "Περισσότερες επιλογές"
 }
