--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4045,5 +4045,9 @@
     "CL_CF_CS_bio24_elements_setup_step3": "Press on ‘’CONNECT OVEN’’ on the left side. When the menu opens, press on the toggle button on the right to enable Wi-Fi.",
     "CL_CF_CS_bio24_elements_setup_step4": "A button ‘’CONNECT’’ appears. Press on the button. You can now proceed in the app by tapping on the NEXT button below.",
     "CL_CF_CS_bio24_elements_pair_step3": "Press on ‘’CONNECT USER’’ on the left side. When the menu opens, press on the ‘’PAIR’’ button. You can now proceed in the app by tapping on the NEXT button below.",
-    "CL_DV_RF_scan_login_code_invalid": "Invalid login QR code!"
+    "CL_DV_RF_scan_login_code_invalid": "Invalid login QR code!",
+    "CL_CF_CS_soft_last_step": "Connect to \"HIS-xxxx\" network in the Wi-Fi settings of your smartphone. \n\nExit ConnectLife app, go to your smartphone’s WiFi settings. Connect to \"HIS-xxxx\" network and return back to ConnectLife app.",
+    "CL_DV_RF_view_detail": "View Details",
+    "CL_DV_RF_structural_diagram": "Structural Diagram",
+    "CL_DV_OV_more_options": "More options"
 }
