--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4045,5 +4045,9 @@
     "CL_CF_CS_bio24_elements_setup_step3": "Appuyez sur « CONNECT OVEN » sur le côté gauche. Lorsque le menu s'ouvre, appuyez sur le bouton bascule à droite pour activer le Wi-Fi.",
     "CL_CF_CS_bio24_elements_setup_step4": "Un bouton « CONNECT » apparaît. Appuyez sur le bouton. Vous pouvez maintenant continuer dans l'application en appuyant sur le bouton SUIVANT ci-dessous.",
     "CL_CF_CS_bio24_elements_pair_step3": "Appuyez sur « CONNECT USER » sur le côté gauche. Lorsque le menu s'ouvre, appuyez sur le bouton « PAIR ». Vous pouvez maintenant continuer dans l'application en appuyant sur le bouton NEXT ci-dessous.",
-    "CL_DV_RF_scan_login_code_invalid": "Code QR de connexion invalide !"
+    "CL_DV_RF_scan_login_code_invalid": "Code QR de connexion invalide !",
+    "CL_CF_CS_soft_last_step": "Connectez-vous au réseau « HIS-xxxx » dans les paramètres Wi-Fi de votre smartphone. \n\n Quittez l'application ConnectLife, accédez aux paramètres Wi-Fi de votre smartphone. Connectez-vous au réseau « HIS-xxxx » et revenez à l'application ConnectLife.",
+    "CL_DV_RF_view_detail": "Voir les détails",
+    "CL_DV_RF_structural_diagram": "Schéma structurel",
+    "CL_DV_OV_more_options": "Plus d'options"
 }
