--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4045,5 +4045,9 @@
     "CL_CF_CS_bio24_elements_setup_step3": "左側の「CONNECT OVEN」を押します。メニューが開いたら、右側のトグルボタンを押して Wi-Fi を有効にします。",
     "CL_CF_CS_bio24_elements_setup_step4": "「CONNECT」ボタンが表示されます。ボタンを押してください。下の「NEXT」ボタンをタップすると、アプリ内を進むことができます。",
     "CL_CF_CS_bio24_elements_pair_step3": "左側の「ユーザー接続」を押します。メニューが開いたら、「ペアリング」ボタンを押します。下の「次へ」ボタンをタップすると、アプリ内を進むことができます。",
-    "CL_DV_RF_scan_login_code_invalid": "ログインQRコードが無効です。"
+    "CL_DV_RF_scan_login_code_invalid": "ログインQRコードが無効です。",
+    "CL_CF_CS_soft_last_step": "スマートフォンのWi-Fi設定で「HIS-xxxx」ネットワークに接続します。 \n\n ConnectLife アプリを終了し、スマートフォンの WiFi 設定に移動します。「HIS-xxxx」ネットワークに接続し、ConnectLife アプリに戻ります。",
+    "CL_DV_RF_view_detail": "詳細を表示",
+    "CL_DV_RF_structural_diagram": "構造図",
+    "CL_DV_OV_more_options": "その他のオプション"
 }
