--- a/language/i18n_zh_CN.json
+++ b/language/i18n_zh_CN.json
@@ -4045,5 +4045,9 @@
     "CL_CF_CS_bio24_elements_setup_step3": "按下左侧的“连接烤箱”。菜单打开后，按下右侧的切换按钮以启用 Wi-Fi。",
     "CL_CF_CS_bio24_elements_setup_step4": "出现“连接”按钮。按下该按钮。现在您可以点击下面的下一步按钮继续操作。",
     "CL_CF_CS_bio24_elements_pair_step3": "按下左侧的“连接用户”。菜单打开后，按下“配对”按钮。现在，您可以通过点击下面的“下一步”按钮继续操作。",
-    "CL_DV_RF_scan_login_code_invalid": "登录二维码无效！"
+    "CL_DV_RF_scan_login_code_invalid": "登录二维码无效！",
+    "CL_CF_CS_soft_last_step": "在智能手机的 Wi-Fi 设置中连接到“HIS-xxxx”网络。 \n\n退出 ConnectLife 应用程序，转到智能手机的 WiFi 设置。连接到“HIS-xxxx”网络并返回 ConnectLife 应用程序。",
+    "CL_DV_RF_view_detail": "查看详细信息",
+    "CL_DV_RF_structural_diagram": "结构图",
+    "CL_DV_OV_more_options": "更多选项"
 }
